--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -134,7 +134,9 @@
 .app__header-head-avartar:hover {
     opacity: 0.9;
 }
-
+.fa-infinity{
+    color: var(--yellow-color);
+}
 .app__header-head-item-has-avartar:hover .app__header-avartar {
     display: block;
 }
@@ -478,7 +480,23 @@
     background-color: rgb(0, 0, 0);
     background-color: rgba(0, 0, 0, 0.4);
 }
-
+.app__header-end-introduce-main{
+    position: relative;
+    left: 25px;
+}
+.app__header-end-introduce-paragraph-2{
+    font-size: 2.6rem;
+}
+.app__header-end-introduce-paragraph-item{
+    font-size: 1.4rem;
+}
+.app__header-end-introduce-paragraph{
+    font-size: 2.6rem;
+}
+.app__header-end-introduce-paragraph-listl{
+    font-size: 1.4rem;
+    font-weight: 00;
+}
 #app__header-end-has-introduce:target {
     display: block;
 }
@@ -805,6 +823,8 @@
 }
 
 .app__header-end-viewer-description {
+    font-size: 1rem;
+    font-weight: 400;
     cursor: default;
 }
 
