--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -20,7 +20,7 @@
 }
 
 * {
-    box-sizing: inherit;
+    box-sizing: border-box;
 }
 
 html {
@@ -37,6 +37,15 @@ html {
 
     to {
         opacity: 1;
+    }
+}
+
+@keyframes goRight {
+    from{
+        left: -100%;
+    }
+    to{
+        left: 1px;
     }
 }
 @keyframes  goUp{
