Xong trang mess

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1522,7 +1522,57 @@
 .app_footer {
     z-index: 10;
     position: relative;
-    bottom:  calc(0 - 130px);
+    bottom:  calc(5px - 130px);
     width: 100%;
+    background-color: #1a1a1a;
     /* height: 40px; */
+}
+
+.app__mess-footer-head-list{
+    list-style: none;
+    padding-left: 0;
+    display: flex;
+}
+.app__mess-footer-head-item{
+    margin-left: 10px;
+}
+.app__mess-footer-head-link{
+    text-decoration: none;
+    display: block;
+    font-size: 1.4rem;
+}
+.he{
+    color: var(--white-color);
+}
+.app__mess-footer-head-mid{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: auto;
+    padding: 0 12px 20px 12px;
+    grid-gap:10px;
+}
+.app__mess-footer-head-company, 
+.app__mess-footer-head-setting,
+.app__mess-footer-head-products,
+.app__mess-footer-head-contact
+{
+    color: var(--white-color);
+} 
+.app__mess-footer-head-products-list,
+.app__mess-footer-head-setting-list,
+.app__mess-footer-head-contact-list{
+    padding-left: 0;
+    list-style: none;
+}
+.app__mess-footer-head-products-item,
+.app__mess-footer-head-setting-item,
+.app__mess-footer-head-contact-item{
+    margin-top: 12px;
+}
+.app__mess-footer-head-down{
+    color: var(--white-color);
+    text-align: center;
+}
+.app__mess-footer-head-down-link{
+    color: var(--white-color);
 }
