--- a/assets/css/reponsive.css
+++ b/assets/css/reponsive.css
@@ -104,7 +104,7 @@
     }
     .app__header-head-resposive-nav{
         width: 300px;
-        height: 5050px;
+        height: 5350px;
         background: linear-gradient(to right bottom, rgb(255 18 211), rgb(5 255 247));;
         position: absolute;
         top: 0;
@@ -124,5 +124,10 @@
         height: 50px;
         border-radius: 50px;
         object-fit: cover;
+    }
+    /* Responsive cho footer ở file message */
+    .app__mess-footer-head-mid{
+        grid-template-columns: repeat(1, 1fr);
+        text-align: center;
     }
 }
