--- a/assets/css/bangtin.css
+++ b/assets/css/bangtin.css
@@ -58,7 +58,7 @@
 }
 .list{
     display: flex;
-    list-style-type: none;
+    list-style: none;
 
 }
 .list li{
@@ -137,14 +137,14 @@
 }
 .bantin_1_3{
     margin-left: 30px;
-    margin-block: -35px;
+    margin-top: -35px;
 }
 .bantin_1_3 h1{
     font-size: 25px;
 }
 .bantin_1_4{
-    padding: 20px;
-    margin-left: 25px;
+    margin-left: 50px;
+    margin-top: -10px;
 }
 #cach2ben{
     margin-left: 5px;
