--- a/assets/css/message.css
+++ b/assets/css/message.css
@@ -1,6 +1,7 @@
+
 .app__mess {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(5,  1fr);
     grid-template-rows: 0.3fr 0.3fr 1fr 1fr 1fr;
     grid-template-areas:
         "h1 h1 h1 h1 h1"
@@ -9,7 +10,7 @@
         "h3 h4 h4 h4 h4"
         "h3 h4 h4 h4 h4"
         "h5 h5 h5 h5 h5";
-    grid-gap: 8px;
+    grid-gap: 10px;
 }
 
 /* Phần header */
@@ -42,7 +43,6 @@ header::after {
 
 .app__mess-head-item {
     font-size: 2rem;
-
 }
 
 .app__mess-head-item+.app__mess-head-item {
@@ -61,7 +61,7 @@ header::after {
     object-fit: cover;
 }
 
-.app__mess-contact {
+.app__mess-navigation-up {
     height: 70px;
     box-shadow: var(--shadow);
     grid-area: h2;
@@ -100,7 +100,7 @@ header::after {
     border-radius: 10px;
 }
 
-.app__mess-navigation {
+.app__mess-navigation-down {
     height: 620px;
     grid-area: h3;
 }
@@ -108,7 +108,7 @@ header::after {
 .app__mess-navigation-list {
     list-style: none;
     padding-left: 0;
-    height: 550px;
+    height: 620px;
     overflow-y: scroll;
 }
 
@@ -119,7 +119,7 @@ header::after {
 .app__mess-navigation-link {
     text-decoration: none;
     color: var(--text-color);
-    display: block;
+    /* display: block; */
     display: flex;
     align-items: center;
 }
@@ -151,10 +151,9 @@ header::after {
     align-items: center;
 }
 
-
-
+/* Viết main */
 main {
-    height: 620px;
+    /* height: 620px; */
     grid-area: h4;
     position: relative;
 }
@@ -281,11 +280,11 @@ main {
 
 .app__mess-hasMsg-down-text {
     margin-left: 15px;
-    width: 1000px;
+    /* width: 800px; */
 }
 
 .app__mess-hasMsg-down-inp {
-    width: 100%;
+    width: 1000px;
     border-radius: 10px;
 }
 
@@ -298,6 +297,7 @@ main {
     grid-area: h5;
     background-color: black;
     position: relative;
+    top: 50px;
     bottom: -5px;
 }
 .app__mess-footer-head-list{
